--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -3,6 +3,37 @@
   display: table;
 }
 
+.VPDoc {
+  padding: 0 !important;
+  overflow: visible !important;
+  position: relative;
+  transition: all 1.2s cubic-bezier(0.16, 0.85, 0.25, 1);
+}
+.container {
+  padding: 0 !important;
+}
+.VPDoc.has-aside .container:has(.theme-main-page) {
+  display: none;
+}
+
+.VPDoc.has-aside .container .aside .aside-curtain {
+  display: none;
+}
+
+.VPContent#VPContent .VPDoc.has-aside > .container:has(.theme-main-page) {
+  display: block;
+  max-width: 100%;
+}
+
+.VPDoc.has-aside .container .content:has(.theme-main-page) {
+  max-width: 100%;
+  padding: 0;
+}
+
+.VPDoc.has-aside .container .content-container:has(.theme-main-page) {
+  max-width: 100%;
+}
+
 td,
 th {
   border: none;
